Course Entity created and lombok refactors